# RotaenoChartTool

./: .gitignore  CMakeLists.txt
include/: Chart.h  Chart.tpp  InputScreen.h  InputScreen.tpp  MainProcess.h
include/ChartDetails/: BPM.h  ChartElement.h  Speed.h  SpeedDistance.h  TrailDistance.h
include/ChartDetails/Notes/: Bomb.h  Catch.h  Flick.h  Note.h  Rotate.h  Slide.h  Tap.h  Trail.h
src/: Chart.cpp  InputScreen.cpp  MainProcess.cpp  RotaenoChartTool.cpp
src/ChartDetails/: BPM.cpp  ChartElement.cpp  Speed.cpp  SpeedDistance.cpp  TrailDistance.cpp
src/ChartDetails/Notes/: Bomb.cpp  Catch.cpp  Flick.cpp  Note.cpp  Rotate.cpp  Slide.cpp  Tap.cpp  Trail.cpp
src/Features/: ChartRotate.cpp  ChartRotateLinear.cpp  DextroySpeed.cpp  GetDistance.cpp  HiddenChartMaker.cpp  MakeCircuit.cpp  NoteConversion.cpp  NoteFollowTrail.cpp  RandomRightAngleMaker.cpp  RealCopy.cpp  ReverseChartMaker.cpp  RrharilSpeed.cpp  SawtoothWaveMaker.cpp  TimeShift.cpp
